--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link ">HOME</a>
             
-            <a href="portfolio.html" class="nav-link active">PORTFOLIO</a>
+            <a href="portfolio.html" class="nav-link active">PORTAFOLIO</a>
             
             <a href="contact.html" class="nav-link">CONTACTO</a>
         </nav>
