--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link ">HOME</a>
             
-            <a href="portfolio.html" class="nav-link">PORTFOLIO</a>
+            <a href="portfolio.html" class="nav-link">PORTAFOLIO</a>
             
             <a href="contact.html" class="nav-link active">CONTACTO</a>
         </nav>
