--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link active">HOME</a>
             
-            <a href="portafolio.html" class="nav-link">PORTFAOLIO</a>
+            <a href="portafolio.html" class="nav-link">PORTAFOLIO</a>
             
             <a href="contact.html" class="nav-link">CONTACTO</a>
         </nav>
