--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
             </section>
             
-            <footer>Ing. Nava Robledo Diego Eduardo <a href="https://www.bootstrapdash.com" target="_blank" rel="noopener noreferrer">Portafolio</a>. All Rights Reserved 2024</footer>
+            <footer>Ing. Nava Robledo Diego Eduardo <a href="#" target="_blank" rel="noopener noreferrer">Portafolio</a>. All Rights Reserved 2024</footer>
         </main>
     </div>
     <script src="assets/vendors/jquery/dist/jquery.min.js?version=1"></script>
