--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <main>
             <section class="intro-section">
                 <h2 class="section-title">Hola, soy ¡Diego Eduardo!</h2>
-                <p>Engresado orgullosamente del Instituto Tecnologíco de Oaxaca en la carrera de Ingeniería en Sistemas Computacionales, desde pequeño me ha apasionado crear cosas desde cero, es por ello que en la programación encontre el gusto por la creación, por lo que puedo puedo agregar un toque personal a mis creaciones en el ambito de la programación, disfruto mucho poder crear sitios web o sistemas, de igual manera he encontrado un gusto por la enseñanza en terceros ya que me he dado cuenta que en ellos puedo sembrar un gusto por la tecnologia.</p>
+                <p>Egresado orgullosamente del Instituto Tecnológico de Oaxaca en la carrera de Ingeniería en Sistemas Computacionales, desde pequeño me ha apasionado crear cosas desde cero, es por ello que en la programación encontré el gusto por la creación, por lo que puedo puedo agregar un toque personal a mis creaciones en el ámbito de la programación, disfruto mucho poder crear sitios web o sistemas, de igual manera he encontrado un gusto por la enseñanza en terceros ya que me he dado cuenta que en ellos puedo sembrar un gusto por la tecnología.</p>
                 <a href="#!" class="btn btn-primary btn-hire-me">ENVIAME UN MENSAJE</a>
             </section>
             <section class="resume-section">
