--- a/index.html
+++ b/index.html
@@ -126,7 +126,14 @@
                                 <span class="badge badge-primary">2022 - 2024</span>
                                 <h6 class="time-line-item-title">ASESOR EDUCATIVO</h6>
                                 <p class="time-line-item-subtitle">IEEA(Instituto Estatal de Educación para Adultos)</p>
-                                <p class="time-line-item-content">He desepeñado actividades de enseñaNza en el area de computación a adultos y jovenes.
+                                <p class="time-line-item-content">He desepeñado actividades de enseñanza en el area de computación a adultos y jovenes.
+                                </p>
+                            </li>
+                             <li class="time-line-item">
+                                <span class="badge badge-primary">2024</span>
+                                <h6 class="time-line-item-title">DOCENTE TECNOLOGÍA</h6>
+                                <p class="time-line-item-subtitle">CUP Colegio Unión y Progreso</p>
+                                <p class="time-line-item-content">He desepeñado actividades de enseñanza en el area de tecnología jovenes.
                                 </p>
                             </li>
                         </ul>
