--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
             <div class="widget card">
                 <div class="card-body">
                     <div class="widget-content">
+                        <h5 class="widget-title card-title">FORMACIÓN COMPLEMENTARIA</h5>
+                        <p>Acreditación "Lengua Extranjera"</p>
+                        <p>Taller-"IA y usos en instituciones educativas"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="widget card">
+                <div class="card-body">
+                    <div class="widget-content">
                         <h5 class="widget-title card-title">INTERESES</h5>
                         <p>Programar</p>
                         <p>Diseño Digital</p>
@@ -133,7 +142,7 @@
                                 <span class="badge badge-primary">2024</span>
                                 <h6 class="time-line-item-title">DOCENTE TECNOLOGÍA</h6>
                                 <p class="time-line-item-subtitle">CUP Colegio Unión y Progreso</p>
-                                <p class="time-line-item-content">He desepeñado actividades de enseñanza en el area de tecnología jovenes.
+                                <p class="time-line-item-content">He desepeñado actividades de enseñanza en el area de tecnología a jovenes.
                                 </p>
                             </li>
                         </ul>
